--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,7 +1,7 @@
-div .card {
+/* div .card {
     width: 40vw;
     border: 1px solid grey;
     background: rgba(0, 0, 0, 0.2);
     margin: 0 auto 20vh;
     
-}
+} */
