--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,9 +1,33 @@
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: start; */
+    margin-top: 120px;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 form input,
-form textarea,
-form button {
+form textarea {
     padding-top: 10px;
     padding-bottom: 10px;
-    margin: 20px auto 20px auto;
+    margin: 30px 0 30px 0;
     display: block;
+    border: none;
 }
+
+.form__input {
+    border-bottom: 1px gray solid;
+}
+
+@media (min-width: 756px) {
+  
+    .form {
+        align-items: start;
+
+    }
+  }
+  
+
