--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,32 +1,98 @@
 .form {
+
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* align-items: start; */
-    margin-top: 120px;
-    width: 60%;
+    align-items: start;
+    margin-top: 250px;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
+
 }
+
+/* image input */
+
+.custom-file-input::-webkit-file-upload-button {
+    visibility: hidden;
+  }
+  .custom-file-input::before {
+    content: 'Selecciona una imagen.';
+    display: inline-block;
+    background: linear-gradient(top, #f9f9f9, #e3e3e3);
+    border: 1px solid #fff;
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    /* text-shadow: 1px 1px #fff; */
+    /* font-weight: 700;
+    font-size: 10pt; */
+  }
+  /* .custom-file-input:hover::before {
+    border-color: black;
+  } */
+  .custom-file-input:active::before {
+    background: rgba(255, 255, 255, 0.4);
+  }
+
+/* text input */
 
 form input,
 form textarea {
     padding-top: 10px;
-    padding-bottom: 10px;
-    margin: 30px 0 30px 0;
+    /* padding-bottom: 10px; */
+    margin: 10px 0 30px 0;
     display: block;
     border: none;
+    background: none;
+    color: #FFF;
+    font-family: 'Poppins', sans-serif; 
+    width: 100%;
 }
 
+textarea {
+    padding: 0;
+    margin: 0;
+}
+
+input:focus,
+textarea:focus {
+    outline-width: 0;   
+    font-family: 'Poppins', sans-serif; 
+}
+
+label {
+    letter-spacing: 1.5px;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #fff;
+    opacity: 1; /* Firefox */
+    font-family: 'Poppins', sans-serif; 
+
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: #fff;
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+    color: #fff;
+  }
+
 .form__input {
-    border-bottom: 1px gray solid;
+    border-bottom: 1px #fff solid;
 }
 
 @media (min-width: 756px) {
   
     .form {
         align-items: start;
-
+        width: 30%;
+        margin-top: 200px;
     }
   }
   
