--- a/src/components/card-flip/CardFlip.css
+++ b/src/components/card-flip/CardFlip.css
@@ -48,13 +48,13 @@
   }
   
   .card__face--front {
-
     background-image: linear-gradient(to bottom left, var(--primary), var(--secondary));
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    transform: rotateY(180deg);
+    /* transform: rotateY(180deg); */
+    /* z-index: 5; */
   }
 
   .card__face--front h2 {
@@ -69,7 +69,7 @@
   .card__face--back {
     background-color: var(--light);
     /* transform: rotateY(180deg); */
-
+    z-index: 99;
   }
   
   .card__content {
