--- a/src/components/button/ButtonDownload.css
+++ b/src/components/button/ButtonDownload.css
@@ -1,6 +1,6 @@
 button {
-    height: 48px;
-    width: 162px;
+    font-size: 19px;
+    padding: 15px 30px;
     border: none;
     color: #0ea56e;
     border-radius: 30px;
@@ -8,7 +8,7 @@ button {
     /* background-color: transparent; */
     background-image: linear-gradient(90deg, #fff 0, #fff 53%, #fff 99%);
     font-family: 'Poppins', sans-serif; 
-    margin: 50px auto;
+    margin: 50px auto 15px;
     cursor: pointer;
     transition: all 500ms ease;
 }
@@ -19,75 +19,19 @@ button:hover {
     transform: scale(1.15);
 }
 
-/**/
+.container__button {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 50px;
+}
 
-/* 
-.button--bestia {
-	font-family: freight-display-pro, serif;
-	font-size: 1.15rem;
+.container__button--a {
+	text-decoration: none;
+	color: rgba(255, 255, 255, 0.521);
+	transition: all 250ms ease-in-out ;
+}
+
+.container__button--a:hover {
+	text-decoration: underline;
 	color: #fff;
-	background: none;
-	padding: 0;
 }
-
-.button--bestia .button__bg {
-	top: 0;
-	left: 0;
-	position: relative;
-	width: 100%;
-	height: 100%;
-	background: #e7e7e7;
-	border-radius: 0.85rem;
-	overflow: hidden;
-	transition: transform 0.4s cubic-bezier(0.1, 0, 0.3, 1);
-}
-
-.button--bestia:hover .button__bg {
-	transform: scale3d(1.2,1.2,1);
-}
-
-.button--bestia .button__bg::before,
-.button--bestia .button__bg::after {
-	content: '';
-	position: absolute;
-	background: #000;
-}
-
-.button--bestia .button__bg::before {
-	width: 110%;
-	height: 0;
-	padding-bottom: 110%;
-
-	left: 50%;
-	border-radius: 50%;
-	transform: translate3d(-50%,-50%,0) scale3d(0,0,1);
-}
-
-.button--bestia:hover .button__bg::before {
-	transition: transform 0.4s cubic-bezier(0.1, 0, 0.3, 1);
-	transform: translate3d(-50%,-50%,0) scale3d(1,1,1);
-}
-
-.button--bestia .button__bg::after {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	opacity: 0;
-	transition: opacity 0.3s;
-}
-
-.button--bestia:hover .button__bg::after {
-	opacity: 1;
-	transition-duration: 0.01s;
-	transition-delay: 0.3s;
-}
-
-.button--bestia span {
-	display: block;
-	position: relative;
-	padding: 1.5rem 3rem;
-	mix-blend-mode: difference;
-} */
-
-/**/
