--- a/src/components/card-flip/CardFlip.css
+++ b/src/components/card-flip/CardFlip.css
@@ -53,8 +53,8 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    /* transform: rotateY(180deg); */
-    /* z-index: 5; */
+    transform: rotateY(180deg);
+    z-index: 88;
   }
 
   .card__face--front h2 {
@@ -69,7 +69,7 @@
   .card__face--back {
     background-color: var(--light);
     /* transform: rotateY(180deg); */
-    z-index: 99;
+    z-index: 5;
   }
   
   .card__content {
