--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,5 +1,4 @@
 .form {
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,35 +7,32 @@
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 /* image input */
 
-.custom-file-input::-webkit-file-upload-button {
-    visibility: hidden;
-  }
-  .custom-file-input::before {
-    content: 'Selecciona una imagen.';
-    display: inline-block;
-    background: linear-gradient(top, #f9f9f9, #e3e3e3);
-    border: 1px solid #fff;
-    border-radius: 3px;
-    padding: 5px 8px;
-    outline: none;
-    white-space: nowrap;
-    -webkit-user-select: none;
-    cursor: pointer;
-    /* text-shadow: 1px 1px #fff; */
-    /* font-weight: 700;
-    font-size: 10pt; */
-  }
-  /* .custom-file-input:hover::before {
-    border-color: black;
-  } */
-  .custom-file-input:active::before {
-    background: rgba(255, 255, 255, 0.4);
-  }
+.form__input--file::-webkit-file-upload-button {
+  display: none;
+}
+  
+.form__input--file::before {
+  content: 'Selecciona una imagen.';
+  display: inline-block;
+  background: linear-gradient(top, #f9f9f9, #e3e3e3);
+  border: 1px solid #fff;
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+}
+.custom-file-input:hover::before {
+  border-color: black;
+}
+.form__input--file:active::before {
+  background: rgba(255, 255, 255, 0.4);
+}
 
 /* text input */
 
@@ -66,6 +62,7 @@ textarea:focus {
 
 label {
     letter-spacing: 1.5px;
+    font-size: 25px;
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
