feat: made readme, made fine details css

--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -37,7 +37,7 @@
 /* text input */
 
 form input,
-form textarea {
+.form__textarea {
     padding-top: 10px;
     /* padding-bottom: 10px; */
     margin: 10px 0 30px 0;
@@ -49,7 +49,7 @@ form textarea {
     width: 100%;
 }
 
-textarea {
+.form__textarea {
     padding: 0;
     margin: 0;
 }
